test/Fail/MissingTypeSignatureInMutual.err
MissingTypeSignatureInMutual.agda:9.3-22: error: [MissingTypeSignature.Function]
Missing type signature for left hand side pred zero
when scope checking the declaration
  pred zero = zero
